--- a/requirements.txt
+++ b/requirements.txt
@@ -37,3 +37,8 @@ seaborn~=0.10.1
 scikit-learn~=0.23.2
 pyts~=0.11.0
 dash~=1.16.3
+plotly~=4.11.0
+nltk~=3.5
+gensim~=3.8.3
+spacy~=2.3.2
+pyLDAvis~=2.1.2
