--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,22 @@
-aiohttp==3.6.2
-alembic==1.4.2
-async-timeout==3.0.1
-attrs==19.3.0
-cachelib==0.1.1
-chardet==3.0.4
-click==7.1.2
-Flask==1.1.2
-Flask-Auth==0.85
-Flask-Migrate==2.5.3
-Flask-Session==0.3.2
-Flask-SQLAlchemy==2.4.4
-Flask-WTF==0.14.3
-idna==2.10
-idna-ssl==1.1.0
-itsdangerous==1.1.0
-Jinja2==2.11.2
-Mako==1.1.3
-MarkupSafe==1.1.1
-multidict==4.7.6
-python-dateutil==2.8.1
-python-editor==1.0.4
-six==1.15.0
-SQLAlchemy==1.3.18
-typing-extensions==3.7.4.2
-Werkzeug==1.0.1
-WTForms==2.3.1
-yarl==1.5.0
-
-pandas~=1.1.1
-pytz~=2020.1
-zarr~=2.4.0
-numpy~=1.19.1
-numcodecs~=0.6.4
-matplotlib~=3.3.1
-seaborn~=0.10.1
+aiohttp~=3.7.1
+SQLAlchemy~=1.3.18
+alembic~=1.4.3
+Flask~=1.1.2
+numpy~=1.19.2
+matplotlib~=3.3.2
+seaborn~=0.11.0
 scikit-learn~=0.23.2
-pyts~=0.11.0
-dash~=1.16.3
-plotly~=4.11.0
 nltk~=3.5
+pandas~=1.1.3
 gensim~=3.8.3
 spacy~=2.3.2
 pyLDAvis~=2.1.2
+pyts~=0.11.0
+pytz~=2020.1
+zarr~=2.5.0
+numcodecs~=0.7.2
 scipy~=1.5.2
+Werkzeug~=1.0.1
+dash~=1.16.3
+plotly~=4.11.0
+noisereduce~=1.1.0
